2009-11-09  Xerxes Rånby  <xerxes@zafena.se>

	* ports/hotspot/src/share/vm/shark/sharkMemoryManager.cpp,
	ports/hotspot/src/share/vm/shark/sharkMemoryManager.hpp:
	New methods deallocateExceptionTable and deallocateFunctionBody
	dependent on the llvm version.
	Made deallocateMemForFunction method dependent on the llvm version.

2009-11-08  Andrew John Hughes  <ahughes@redhat.com>

	* patches/icedtea-xshm.patch: Renamed to...
	* Makefile.am:
	List all mandatory patches together.  Rename
	xshm patch to include bug ID.
	* patches/icedtea-6897844-xshm.patch:
	...include bug ID.

2009-11-08  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am: Add missing security patch.
	* NEWS: List new security fixes with CVEs.
	* patches/security/icedtea-6664512.patch:
	Missing security patch from OpenJDK6 repository.
	
2009-11-08  Andrew John Hughes  <ahughes@redhat.com>

	* patches/security/icedtea-6657138.patch,
	* patches/security/icedtea-6824265.patch:
	Fix security patches which don't apply.

2009-11-06  Matthias Klose  <doko@ubuntu.com>

	* patches/security/icedtea-6657026.patch: Add missing context line.

2009-11-06  Xerxes Rånby  <xerxes@zafena.se>

	* ports/hotspot/src/share/vm/shark/sharkBuilder.cpp
	(SharkBuilder::cmpxchg_int): Correct suffix for the
	llvm.atomic.cmp.swap intrinsic.
	(SharkBuilder::cmpxchg_ptr): Likewise.

2009-11-05 Martin Matejovic <mmatejov@redhat.com>

	* patches/security/icedtea-6631533.patch
	* patches/security/icedtea-6632445.patch
	* patches/security/icedtea-6636650.patch
	* patches/security/icedtea-6631533.patch
	* patches/security/icedtea-6657026.patch
	* patches/security/icedtea-6657138.patch
	* patches/security/icedtea-6822057.patch
	* patches/security/icedtea-6824265.patch
	* patches/security/icedtea-6861062.patch
	* patches/security/icedtea-6872358.patch
	* Makefile.am: apply the above 

2009-11-05 Edward Nevill <ed@camswl.com>

	* Make OSR work with Shark
	* Fix hs16 build
	* ports/hotspot/src/cpu/zero/vm/asm_helper.cpp